# brain_games

./: README.md  pyproject.toml
.github/workflows/: helloworld.yml
brain_games/: cli.py
brain_games/scripts/: .brain_games.py.swo  .brain_games.py.swp  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
